# machine-learning-zoomcamp-Capstone1

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  teacher-churn_preprocess_eda_models.ipynb
.ipynb_checkpoints/: teacher-churn_preprocess_eda_models-checkpoint.ipynb
config/: deployment.yaml  service.yaml
lambda_deploy/: app.py  deploy.sh  dockerfile  lambda_function.py  pyproject.toml  response.json  teacher.json
my_capstone1/: pyvenv.cfg
