[project]
name = "capstone1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "xgboost", 
    "pandas", 
]

[tool.uv.workspace]
members = [
    "lambda_deploy",
]
